--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chart.js": "^2.9.3",
     "react": "^16.13.1",
@@ -35,9 +33,16 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^7.0.0",
     "cypress": "^7.4.0",
     "miragejs": "^0.1.40",
     "prop-types": "^15.7.2",
+    "react-test-renderer": "^17.0.2",
     "time-series-data-generator": "^0.1.5"
+  },
+  "jest": {
+    "coverageReporters": ["html"]
   }
 }
